--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -39,7 +39,7 @@
 
 		</h:panelGrid>
 		
-		<p:messages id="msg" closable="true" />
+		<p:messages id="msg" closable="true" severity="info, warn" />
 
 
 	</h:form>
